@@ -154,6 +154,7 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [Templates] Added support for multiple indexes
   * [AgentS] Added ~*req prefix for freeswitch extra_fields
   * [AgentS] Changed NavigableMap with DataNode for speed improvements
+  * [SessionS] RequestType *none returns back the requested usage
 
  -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200
 
